--- a/index.html
+++ b/index.html
@@ -96,9 +96,8 @@
 	<section id="about-section" class="about-section section theme-bg-light">
 		<div class="container">
 			<div class="row">
-				<img class="col-md-6" src="assets/images/about.jpeg" style="object-fit: contain;"> 
-				
-				<div class="col">
+				<img class="col-12 col-md-6 col-lg-6 mb-4" src="assets/images/about.jpeg" style="object-fit: contain; height: 100%; padding-top:25vh;">
+				<div class="col-12 col-md-6 col-lg-6 mb-4">
 					<h2 style="padding-top:20px; padding-left: 50px; padding-right: 50px; line-height:1.5">Understanding <br>
 						the brain is about <br>
 						understanding who we are.</h2>
@@ -108,7 +107,7 @@
 							to explore their interest in neuroscience and encourages their ongoing growth in the field as they continue into graduate or professional studies. 
 							<br> <br>
 							The conference will feature undergraduate student poster and oral presentations, two panels with professionals from the neurosciences and mental 
-							health fields, and two keynote =. Honorariums will be awarded to outstanding oral and poster presentations, as determined by a panel of judges.
+							health fields, and two keynote speakers. Honorariums will be awarded to outstanding oral and poster presentations, as determined by a panel of judges.
 							<br><br>
 							Any undergraduate students involved in neuroscience research at a university in Canada are welcome to present at the conference. Anyone interested in neuroscience research is welcome to attend. 
 							</p>
