--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"> 
 <head>
-	<title>DevConf - Bootstrap 4 Template For Tech Conference or Events</title>
+	<title>NeuroXChange Conference 2021</title>
 	
 	<!-- Meta -->
 	<meta charset="utf-8">
@@ -9,7 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Bootstrap 4 Tech Conference Template">
 	<meta name="author" content="Xiaoying Riley at 3rd Wave Media">    
-	<link rel="shortcut icon" href="favicon.ico"> 
+	<link rel="shortcut icon" href="nxcap.png"> 
 	
 	<!-- Google Font -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:600,700,800|Roboto:300,400,700&display=swap" rel="stylesheet">
@@ -31,7 +31,7 @@
 				<nav class="main-nav navbar navbar-expand-lg">
 					<div class="site-logo"><a class="scrollto" href="#hero-block"><img class="logo-icon" src="assets/images/NXC- logo.png" alt="logo"></a></div>    
 					
-					<div class="navbar-btn order-lg-2"><a class="btn btn-secondary" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/devconf-free-bootstrap-4-conference-template-for-tech-conferences-and-events/" target="_blank">Tickets</a></div>
+					<div class="navbar-btn order-lg-2"><a class="btn btn-secondary" href="https://forms.gle/PJUeDbKwH4Wcbcnv8" target="_blank">Tickets</a></div>
 					
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"></span>
@@ -69,7 +69,7 @@
 			<div class="hero-text-block" >
 				<h1 class="hero-heading mb-2" style="font-weight: 200;font-style: italic;">NEUROXCHANGE CONFERENCE 2021</h1>
 				<div class="hero-meta mb-3"><i class="far fa-calendar-alt mr-2"></i>May 8th 2021 <i class="fas fa-map-marker-alt mx-2"></i>McMaster University</div>
-				<div class="hero-cta"><a class="btn btn-primary btn-lg" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/devconf-free-bootstrap-4-conference-template-for-tech-conferences-and-events/" target="_blank">Get Tickets</a></div>
+				<div class="hero-cta"><a class="btn btn-primary btn-lg" href="https://forms.gle/PJUeDbKwH4Wcbcnv8" target="_blank">Get Tickets</a></div>
 
 			</div><!--//hero-text-block-->
 			
@@ -171,7 +171,7 @@
 		</div>
 	</div>
 
-			<div class="about-cta text-center mb-5"><a class="btn btn-secondary btn-lg  mb-5" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/devconf-free-bootstrap-4-conference-template-for-tech-conferences-and-events/" target="_blank">Get Your Ticket Today</a></div>
+			<div class="about-cta text-center mb-5"><a class="btn btn-secondary btn-lg  mb-5" href="https://forms.gle/PJUeDbKwH4Wcbcnv8" target="_blank">Get Your Ticket Today</a></div>
 		</div><!--//container-->
 	</section><!--//about-section-->
 	
