--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 	<section id="about-section" class="about-section section theme-bg-light">
 		<div class="container">
 			<div class="row">
-				<img class="col-12 col-md-6 col-lg-6 mb-4" src="assets/images/about.jpeg" style="object-fit: contain; height: 100%; padding-top:25vh;">
+				<img class="col-12 col-md-6 col-lg-6 mb-4" src="assets/images/about.JPG" style="object-fit: contain; height: 100%; padding-top:25vh;">
 				<div class="col-12 col-md-6 col-lg-6 mb-4">
 					<h2 style="padding-top:20px; padding-left: 50px; padding-right: 50px; line-height:1.5">Understanding <br>
 						the brain is about <br>
