update on fees and registration

--- a/index.html
+++ b/index.html
@@ -150,9 +150,7 @@
 					<h4 style="text-align: center;"> Attendees </h4>
 					<p class="section-intro single-col-max mx-auto mb-4"> Anyone may attend, including undergraduate students, graduate students, and faculty.
 						<br> <br>
-							The cost for attendees is $15 plus applicable fees. Refreshments, lunch, conference program, 
-							reusable NXC bag, and commemorative gifts will be provided under this price. Tickets must be 
-							purchased in advance.
+							The cost for attendees is free, but tickets still must be booked in advance.
 					</p> 
 				</div>
 				<div class="col-md-6">
@@ -164,7 +162,7 @@
 								to present the research project. The presenter must ensure their research is in accordance 
 								with one of the research areas in neuroscience listed above. <br><br>
 								The research must be consistent with <a href="https://secretariat.mcmaster.ca/university-policies-procedures-guidelines/"> McMaster University's Academic Integrity Guidelines </a>. <br><br>
-								The cost for presentees is $25 plus applicable fees. Refreshments, lunch, conference program, reusable NXC bag, and commemorative gifts will be provided. For more information on registration, 
+								The cost for presentees is free. For more information on registration, 
 								and types of presentations, visit the  <a class="scrollto" href=#presenter-section>Presenter Info</a> tab.</p> 
 					</div>
 			</div>
@@ -207,17 +205,15 @@
 							<div class="col-12 col-md-6 mb-4">
 								<div class="grid-item p-4">
 									<h5 class="text-white mb-3 title"><i class="fas fa-plane-departure mr-2"></i>Registration</h5>
-									<p>To register as a poster presenter, involves making a $25 (plus applicable fees) payment and 
-										submitting the abstract for your poster (300 words or less). Check out the registration section 
-										to buy your ticket. All abstracts submitted for poster presentations are accepted provided that the research to be presented relates to one of the Research Areas in neuroscience. Submit your abstract before April 22, 2020 through this link: https://docs.google.com/forms/poster.</p>
-									<a class="text-white" href="https://forms.gle/EbKjejBJeE7gr4LN9">Google Form &rarr;</a>
+									<p>To register as a poster presenter, involves
+										submitting the abstract for your poster (300 words or less). All abstracts submitted for poster presentations are accepted provided that the research to be presented relates to one of the Research Areas in neuroscience. Submit your abstract through this google link: </p>
+									<!--<a class="text-white" href="https://forms.gle/EbKjejBJeE7gr4LN9">Google Form &rarr;</a>-->
 								</div><!--//grid-item-->
 							</div><!--col-->
 							<div class="col-12 col-md-6 mb-4">
 								<div class="grid-item p-4">
 									<h5 class="text-white mb-3 title"><i class="fas fa-car mr-2"></i>Presentation Information</h5>
-									<p>Posters are typically 48" x 36" or 36" x 48". Posters will be displayed on poster boards during one of two scheduled presentation sessions. Presenters must be available at theme-bg-primaryposter during their assigned time slot. Your poster should contain the following features: 
-										Title, Introduction, Materials and Methods, Results, Conclusion, and References.
+									<p>Presntation information will be released closer to the date of the conference. In general the information that should be presented include: Title, Introduction, Materials and Methods, Results, Conclusion, and References.
 									</p>
 								</div><!--//grid-item-->
 							</div><!--col-->
@@ -234,10 +230,9 @@
 									<p>Students who wish to be oral presenters must submit an abstract of their research in the application. In addition to the abstract, 
 										the submission of a video is strongly encouraged, but not required. The video does not have to be on the same topic they wish to present 
 										at the conference, but rather is intended as a demonstration of your presentation skills. If you choose to submit a video, please upload 
-										your file onto YouTube and provide us with the link in the application form. Successful applicants will be contacted via email with the 
-										link to an Eventbrite page where the purchase of a Presenter Ticket ($25) can be made. Submit your application before March 30, 2020 
-										through the google form.</p>
-									<a class="text-white" href="https://forms.gle/KrQH7Zf5iVCPyQHJ9">Google Form &rarr;</a>
+										your file onto YouTube and provide us with the link in the application form. Successful applicants will be contacted via email. Submit your application 
+										through this google form:</p>
+									<!--<a class="text-white" href="https://forms.gle/KrQH7Zf5iVCPyQHJ9">Google Form &rarr;</a>-->
 								</div><!--//grid-item-->
 							</div><!--col-->
 							<div class="col-12 col-md-6 mb-4">
