added google forms

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 									<h5 class="text-white mb-3 title"><i class="fas fa-plane-departure mr-2"></i>Registration</h5>
 									<p>To register as a poster presenter, involves
 										submitting the abstract for your poster (300 words or less). All abstracts submitted for poster presentations are accepted provided that the research to be presented relates to one of the Research Areas in neuroscience. Submit your abstract through this google link: </p>
-									<!--<a class="text-white" href="https://forms.gle/EbKjejBJeE7gr4LN9">Google Form &rarr;</a>-->
+									<a class="text-white" href="https://forms.gle/EbKjejBJeE7gr4LN9">Google Form &rarr;</a>
 								</div><!--//grid-item-->
 							</div><!--col-->
 							<div class="col-12 col-md-6 mb-4">
@@ -232,7 +232,7 @@
 										at the conference, but rather is intended as a demonstration of your presentation skills. If you choose to submit a video, please upload 
 										your file onto YouTube and provide us with the link in the application form. Successful applicants will be contacted via email. Submit your application 
 										through this google form:</p>
-									<!--<a class="text-white" href="https://forms.gle/KrQH7Zf5iVCPyQHJ9">Google Form &rarr;</a>-->
+									<a class="text-white" href="https://forms.gle/KrQH7Zf5iVCPyQHJ9">Google Form &rarr;</a>
 								</div><!--//grid-item-->
 							</div><!--col-->
 							<div class="col-12 col-md-6 mb-4">
