--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 						the brain is about <br>
 						understanding who we are.</h2>
 					<p class="section-intro single-col-max mx-auto mb-4" style="padding-left: 50px;"> 
-							The NeuroXChange Conference (NXC) is a Canada-wide undergraduate research conference that brings together undergraduate students 
+							The NeuroXChange Conference (NXC) is a Ontario-wide undergraduate research conference that brings together undergraduate students 
 							to showcase and discuss research in the field of neuroscience. The conference provides the opportunity for undergraduate students 
 							to explore their interest in neuroscience and encourages their ongoing growth in the field as they continue into graduate or professional studies. 
 							<br> <br>
@@ -162,7 +162,7 @@
 								to present the research project. The presenter must ensure their research is in accordance 
 								with one of the research areas in neuroscience listed above. <br><br>
 								The research must be consistent with <a href="https://secretariat.mcmaster.ca/university-policies-procedures-guidelines/"> McMaster University's Academic Integrity Guidelines </a>. <br><br>
-								The cost for presentees is free. For more information on registration, 
+								For more information on registration, 
 								and types of presentations, visit the  <a class="scrollto" href=#presenter-section>Presenter Info</a> tab.</p> 
 					</div>
 			</div>
@@ -206,14 +206,14 @@
 								<div class="grid-item p-4">
 									<h5 class="text-white mb-3 title"><i class="fas fa-plane-departure mr-2"></i>Registration</h5>
 									<p>To register as a poster presenter, involves
-										submitting the abstract for your poster (300 words or less). All abstracts submitted for poster presentations are accepted provided that the research to be presented relates to one of the Research Areas in neuroscience. Submit your abstract through this google link: </p>
-									<a class="text-white" href="https://forms.gle/EbKjejBJeE7gr4LN9">Google Form &rarr;</a>
+										submitting the abstract for your poster (300 words or less). All abstracts submitted for poster presentations are accepted provided that the research to be presented relates to one of the Research Areas in neuroscience. Registrations will open on February 10, 2021. </p>
+									<!-- <a class="text-white" href="https://forms.gle/EbKjejBJeE7gr4LN9">Google Form &rarr;</a> -->
 								</div><!--//grid-item-->
 							</div><!--col-->
 							<div class="col-12 col-md-6 mb-4">
 								<div class="grid-item p-4">
 									<h5 class="text-white mb-3 title"><i class="fas fa-car mr-2"></i>Presentation Information</h5>
-									<p>Presntation information will be released closer to the date of the conference. In general the information that should be presented include: Title, Introduction, Materials and Methods, Results, Conclusion, and References.
+									<p>Presentation information will be released once registrations are opened. In general the information that should be presented include: Title, Introduction, Materials and Methods, Results, Conclusion, and References.
 									</p>
 								</div><!--//grid-item-->
 							</div><!--col-->
@@ -230,9 +230,8 @@
 									<p>Students who wish to be oral presenters must submit an abstract of their research in the application. In addition to the abstract, 
 										the submission of a video is strongly encouraged, but not required. The video does not have to be on the same topic they wish to present 
 										at the conference, but rather is intended as a demonstration of your presentation skills. If you choose to submit a video, please upload 
-										your file onto YouTube and provide us with the link in the application form. Successful applicants will be contacted via email. Submit your application 
-										through this google form:</p>
-									<a class="text-white" href="https://forms.gle/KrQH7Zf5iVCPyQHJ9">Google Form &rarr;</a>
+										your file onto YouTube and provide us with the link in the application form. Successful applicants will be contacted via email. Registrations will open on February 10, 2021.</p>
+									<!-- <a class="text-white" href="https://forms.gle/KrQH7Zf5iVCPyQHJ9">Google Form &rarr;</a> -->
 								</div><!--//grid-item-->
 							</div><!--col-->
 							<div class="col-12 col-md-6 mb-4">
