--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 	<section id="speakers-section" class="speakers-section section">
 		<div class="container">
 			<h3 class="section-heading text-center mb-3">Speakers</h3>
-			<div class="section-intro text-center single-col-max mx-auto mb-5">List your featured speakers here. You can provide more info about each speaker in the relevant modal windows. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+			<div class="section-intro text-center single-col-max mx-auto mb-5"></div>
 			<div class="row">
 
 				<div class="col-12 col-md-6 col-lg-6 mb-4" style="padding:50px">
