why did this not get updated

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<ul class="nav navbar-nav">
 							
 							<li class="nav-item"><a class="nav-link scrollto" href="#about-section">About</a></li>                                              
-							<!-- <li class="nav-item"><a class="nav-link scrollto" href="#speakers-section">Speakers</a></li> -->
+							<li class="nav-item"><a class="nav-link scrollto" href="#speakers-section">Speakers</a></li>
 							<!-- <li class="nav-item"><a class="nav-link scrollto" href="#panel-section">Panel</a></li> -->
 							<!-- <li class="nav-item"><a class="nav-link scrollto" href="#schedule-section">Schedule</a></li> -->
 							<!-- <li class="nav-item"><a class="nav-link scrollto" href="#tickets-section">Tickets</a></li> -->
@@ -249,8 +249,8 @@
 								<div class="grid-item p-4">
 									<h5 class="text-white mb-3 title"><i class="fas fa-plane-departure mr-2"></i>Registration</h5>
 									<p>To register as a poster presenter, involves
-										submitting the abstract for your poster (300 words or less). All abstracts submitted for poster presentations are accepted provided that the research to be presented relates to one of the Research Areas in neuroscience. Registrations will open on February 28, 2021. </p>
-									<!-- <a class="text-white" href="https://forms.gle/EbKjejBJeE7gr4LN9">Google Form &rarr;</a> -->
+										submitting the abstract for your poster (300 words or less). All abstracts submitted for poster presentations are accepted provided that the research to be presented relates to one of the Research Areas in neuroscience. Applications close on Saturday, March 20th, 2021 at 11:59 pm. Fill out this Google Form to apply: </p>
+									<a class="text-white" href="https://tinyurl.com/nxcpresenter">Google Form &rarr;</a>
 								</div><!--//grid-item-->
 							</div><!--col-->
 							<div class="col-12 col-md-6 mb-4">
@@ -273,14 +273,14 @@
 									<p>Students who wish to be oral presenters must submit an abstract of their research in the application. In addition to the abstract, 
 										the submission of a video is strongly encouraged, but not required. The video does not have to be on the same topic they wish to present 
 										at the conference, but rather is intended as a demonstration of your presentation skills. If you choose to submit a video, please upload 
-										your file onto YouTube and provide us with the link in the application form. Successful applicants will be contacted via email. Registrations will open on February 28, 2021.</p>
-									<!-- <a class="text-white" href="https://forms.gle/KrQH7Zf5iVCPyQHJ9">Google Form &rarr;</a> -->
+										your file onto YouTube and provide us with the link in the application form. Successful applicants will be contacted via email. Applications close on Saturday, March 20th, 2021 at 11:59 pm. Fill out this google form to apply: </p>
+									<a class="text-white" href="https://tinyurl.com/nxcpresenter">Google Form &rarr;</a>
 								</div><!--//grid-item-->
 							</div><!--col-->
 							<div class="col-12 col-md-6 mb-4">
 								<div class="grid-item p-4">
 									<h5 class="text-white mb-3 title"><i class="fas fa-car mr-2"></i>Presentation Information</h5>
-									<p>All selected oral presenters will be contacted and provided with guidelines for their presentation. If you are not selected as an oral presenter, you will automatically be registered as a poster presenter.
+									<p>All selected oral presenters will be contacted and provided with guidelines for their presentation. If you are not selected as an oral presenter, you have the option to be considered to present as a poster presenter.
 									</p>
 								</div><!--//grid-item-->
 							</div><!--col-->
